kustomize/overlays/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-todo
  labels:
    app: go-todo
spec:
  selector:
    matchLabels:
      app: go-todo
  template:
    metadata:
      labels:
        app: go-todo
    spec:
      containers:
        - name: go-todo
          image: jackcaldwell/go-todo
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
          resources:
            limits:
              cpu: 100m
              memory: 256Mi
            requests:
              cpu: 80m
              memory: 128Mi
